<resources>
    <string name="app_name">Unibox</string>
    <string name="bienvenido_a_unibox">Bienvenido a Unibox</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="telefono">Teléfono</string>
    <string name="contrasena">Contraseña</string>
    <string name="acepto_los_terminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="email">Email</string>
    <string name="recuerdame">Recuérdame</string>
    <string name="hola_jhon">Hola Jhon</string>
    <string name="qu_se_antoj">¿Qué se te antoja hoy?</string>
    <string name="categor_as">Categorias</string>
    <string name="cajas_de_la">CAJAS DE LA CONFIANZA</string>
    <string name="mapa">MAPA</string>
    <string name="cafe_teria">PROMOCIONES</string>
    <string name="los_4_m_s_e">¡Los 4 más elegidos!</string>
    <string name="ponti_gomit">Ponti Gomitas</string>
    <string name="candy">Candy Puj</string>
    <string name="dani_po">DaniPostres</string>
    <string name="capri">Capricho</string>
    <string name="capri2">Capricho</string>
    <string name="emprendimie1">Emprendimientos cerca de mi (12)</string>
    <string name="atrio_de_in">UBICACIÓN ACTUAL: Atrio de Ingenieria $10.000 - 17.000</string>
    <string name="cubos">UBICACIÓN ACTUAL: Cubos $5.000 - 10.000</string>
    <string name="dani2">DaniPostres</string>
    <string name="tu_ubicaci_">Tu ubicación actual</string>
    <string name="pontificia_">Pontificia Universidad Javeriana</string>
    <string name="emprendimie2">Emprendimientos cerca de ti</string>
    <string name="comida">Comida</string>
    <string name="dulces">Dulces</string>
    <string name="caja_de_con">CAJA DE CONFIANZA:</string>
    <string name="edificio_12">Edificio 12</string>
    <string name="edificio_67">Edificio 67</string>
    <string name="bombon">Bombon</string>
    <string name="dulceComment">Dulces</string>
    <string name="describe_tu">Describe tu experiencia (opcional)</string>
    <string name="tu_feedback">Tu feedback es muy valioso para el vendedor... Recuerda que sera visto por todos los usuarios de marketplace</string>
    <string name="publicar_co">Publicar comentario</string>
    <string name="realiza_tu_">Realiza tu pago</string>
    <string name="some_id">3003130680</string>
    <string name="comunicate_">Comunicate con el vendedor</string>
    <string name="pago">Pagar</string>
    <string name="actualmente">Actualmente eres</string>
    <string name="comprador">Comprador</string>
    <string name="user">JOHN DOE</string>
    <string name="disponible">Disponible</string>
    <string name="und_">24 unds.</string>
    <string name="amount">2</string>
    <string name="simbolo">-</string>
    <string name="simboloMas">+</string>
    <string name="dulces2">Dulces</string>
    <string name="es_un_caram">Es un caramelo relleno de chicle, ademas de su inconfundible sabor.\n</string>
    <string name="price">$500</string>
    <string name="comentarios">11 Comentarios</string>
    <string name="a_adir">Añadir</string>
    <string name="postre">Postre de Maracuya</string>
    <string name="buscar_en_f">Buscar en favoritos</string>
    <string name="favoritos">Favoritos</string>
    <string name="cupcakes">Cupcakes</string>
    <string name="categoriaProducto">Postres</string>
    <string name="nucita">Nucita</string>
    <string name="okaloca">Oka Loca</string>
    <string name="sandwich">Sandwich</string>
    <string name="bowl">Bowl</string>
    <string name="pielimon">Pie de Limón</string>
    <string name="revolcon">Revolcon</string>
    <string name="donuts">Donas</string>
    <string name="tus_cajitas">Tus Cajitas</string>
    <string name="nombre_del_negocio">Nombre de tu negocio</string>
    <string name="seleccionar_categorias">Seleccionar Categorias</string>
    <string name="registrate_como_vendedor">Registrate Como Vendedor!</string>
    <string name="mostrar_ruta">Mostrar Ruta</string>
    <string name="confirmar_ubicacion">Confirmar ubicación</string>
    <string name="finalizar_evento">Finalizar evento</string>
    <string name="regresar">Regresar</string>
    <string-array name="categorias">
        <item>Comida</item>
        <item>Dulces</item>
        <item>Postres</item>
    </string-array>
    <string-array name="tipo">
        <item>Comprador</item>
        <item>Vendedor</item>
    </string-array>
    <string-array name="cajitas">
        <item>Caja 1</item>
        <item>Caja 2</item>
        <item>Caja 3</item>
        <item>Caja 4</item>
        <item>Caja 5</item>
        <item>Caja 6</item>
        <item>Caja 7</item>
        <item>Caja 8</item>
        <item>Caja 9</item>
        <item>Caja 10</item>
    </string-array>
</resources>