<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="20dp"
    tools:context=".MainActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_unibox"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Texto de bienvenida -->
    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_unibox"
        style="@style/TitleStyleWhite"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón de Iniciar Sesión -->
    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        style="@style/BtnYellow"
        app:layout_constraintTop_toBottomOf="@id/bienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Botón de Registrarse -->
    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        style="@style/BtnYellow"
        app:layout_constraintTop_toBottomOf="@id/btn_iniciar_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
