<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_profil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#FFFFFF">

    <View
        android:id="@+id/image_21"
        android:layout_width="500dp"
        android:layout_height="440dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/dulce" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="47dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:src="@drawable/boton" />

    <View
        android:id="@+id/rectangle_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="398dp"
        android:background="@drawable/rectangle_9" />

    <TextView
        android:id="@+id/bombon"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="417dp"
        android:text="@string/bombon"
        android:textAppearance="@style/bombon"
        android:lineSpacingExtra="-14sp"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/dulceComment"
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="453dp"
        android:gravity="top"
        android:lineSpacingExtra="-7sp"
        android:text="@string/dulceComment"
        android:textAppearance="@style/dulceComment" />

    <View
        android:id="@+id/group_8715"
        android:layout_width="158dp"
        android:layout_height="26.33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/estrellas" />

    <TextView
        android:id="@+id/describe_tu"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="492dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/describe_tu"
        android:textAppearance="@style/describe_tu" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="342dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="536dp"
        android:background="@drawable/rectangle_1" />

    <View
        android:id="@+id/rectangle_11"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="800dp"
        android:background="@drawable/rectangle_12" />

    <TextView
        android:id="@+id/tu_feedback"
        android:layout_width="307dp"
        android:layout_height="134dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="550.55dp"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/tu_feedback"
        android:textAppearance="@style/tu_feedback"
        android:translationY="-0.8sp" />

    <TextView
        android:id="@+id/publicar_co"
        android:layout_width="205.96dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="810dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/publicar_co"
        android:textAppearance="@style/publicar_co" />

</RelativeLayout>