<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/magnolia"
    tools:context=".Activity_Register">

    <!-- Logo UniBox -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/logo_boxi_circulo"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título debajo del logo -->
    <TextView
        android:id="@+id/main_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido a UniBox"
        style="@style/TitleStyleRoseRed"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        style="@style/TextInputStyle"
        app:layout_constraintTop_toBottomOf="@id/main_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        style="@style/TextInputStyle"
        app:layout_constraintTop_toBottomOf="@id/usernameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:textCursorDrawable="@null"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Checkbox términos y condiciones -->
    <CheckBox
        android:id="@+id/rememberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuerdame"
        android:layout_marginTop="10dp"
        style="@style/ParagraphStyleRoseRed"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:buttonTint="@color/roseRed"/>

    <!-- Botón de Iniciar Sesión -->
    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        style="@style/BtnRed"
        app:layout_constraintTop_toBottomOf="@id/rememberCheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Botón de Registrarse -->
    <Button
        android:id="@+id/btn_registrarse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        style="@style/BtnRed"
        app:layout_constraintTop_toBottomOf="@id/btn_iniciar_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>